--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,14 +11,12 @@
           <span class="text-color font-weight-bold">{{ .writter | markdownify }}</span>
           <h1 class="mb-3 mt-2">{{ .title | markdownify }}</h1>
 
-          <div class="mb-4">
-            <h4>Price :- <span class="text-color">${{ .price }}</span></h4>
-          </div>
           <p class="mb-4">{{ .content | markdownify }}</p>
-          <button class="snipcart-add-item btn btn-main mt-2" data-item-id="1"
-          data-item-name="{{ .title | markdownify }}" data-item-image="{{ .image | absURL }}" data-item-price="{{ .price }}" data-item-url="/">
-          Purchase now <i class="ti-angle-right ml-3"></i>
-        </button>
+          <a href="https://2020-java-concurrency-primitives-nov.konfeo.com/pl/groups">
+          <button class="btn btn-main mt-2">
+          Kup teraz <i class="ti-angle-right ml-3"></i>
+          </button>
+          </a>
         </div>
       </div>
 
