--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -16,7 +16,7 @@
 
       <div class="col-lg-6">
         <div class="subscribe">
-          <h4 class="mb-4">Get up to 20% Discount</h4>
+          <h4 class="mb-4">Uzyskaj do 20% rabatu</h4>
           <script>var fmFCFgvi71ah18g=function(e){if(e.data.type==='resize'){document.getElementById('fm-fc-f-gvi71ah18g').style.minHeight=e.data.size+'px'}};window.addEventListener?addEventListener('message',fmFCFgvi71ah18g,!1):attachEvent('onmessage',fmFCFgvi71ah18g);
           </script><iframe id="fm-fc-f-gvi71ah18g" src="https://forms.freshmail.io/f/htceubeto0/gvi71ah18g/index.html" frameborder="0" marginheight="0" marginwidth="0" width="100%" style="min-height: 606px"></iframe>          
         </div>
