--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -39,7 +39,7 @@
         {{ "<!-- nav btn -->" | safeHTML }}
           <button class="snipcart-add-item btn btn-border-tp btn-small ml-3" data-item-id="1"
           data-item-name="{{ .Site.Data.homepage.banner.title | markdownify }}" data-item-image="{{ .Site.Data.homepage.banner.image | absURL }}" data-item-price="{{ .Site.Data.homepage.banner.price }}" data-item-url="/">
-          Purchase now
+          Kup teraz
         </button>
         {{ end }}
       </div>
