updated addthis placement

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
         <div class="main-banner">
           <span class="text-color font-weight-bold">{{ .writter | markdownify }}</span>
           <h1 class="mb-3 mt-2">{{ .title | markdownify }}</h1>
-
+          <div class="addthis_inline_share_toolbox"></div>    
           <p class="mb-4">{{ .content | markdownify }}</p>
           <a href="https://2020-java-concurrency-primitives-nov.konfeo.com/pl/groups">
           <button class="btn btn-main mt-2">
