--- a/layouts/index.html
+++ b/layouts/index.html
@@ -310,6 +310,7 @@
       {{ range .book }}
       <div class="col-lg-3 col-md-6 col-sm-6">
         <div class="book-item mb-4 mb-lg-0">
+          <div><strong>{{ .title }}</strong></div>
           <img src="{{ .image | relURL }}" alt="" class="img-fluid">
           <a href="{{ .link | safeURL }}" class="hover-item">
             <i class="ti-link"></i>
